# tmp_clang_errors

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/workflows/: linux-clang.yml  windows-clang.yml  windows-msvc.yml
lib_b/: CMakeLists.txt  main.cpp
lib_b/lib_a/: CMakeLists.txt  b.cppm
test_program/: CMakeLists.txt  build.bat  build.sh  main.cpp
test_program/test_library/: CMakeLists.txt  test_module.cppm
test_program/test_module/: test_module.cppm
